--- a/latex-calcs/answer-distribution.tex
+++ b/latex-calcs/answer-distribution.tex
@@ -35,35 +35,74 @@ Determine $\lambda$:
 \begin{align*}
 	E[f(t)] &= \int_{0}^{\infty} t f(t) dt \\
 		&= \int_{0}^{\infty} \lambda t e^{-\lambda t} dt \\
-		\\
 	u = t & \ \ \ \ \ \ \ \ \ dv = \lambda e^{-\lambda t} dt \\
 	du  =  dt & \ \ \ \ \ \ \ \ \ v = -e^{-\lambda t} \\
-		\\
 		&= \left[-t e^{-\lambda t}\right]_{0}^{\infty} - \int_{0}^{\infty} - e^{-\lambda t} dt \\
 		&= \left[-t e^{-\lambda t} - \frac{e^{-\lambda t}}{\lambda}\right]_{0}^{\infty} \\
 		&= -\infty e^{-\lambda \infty} - \frac{e^{-\lambda \infty}}{\lambda}
 		+ 0 e^{-\lambda 0} + \frac{e^{-\lambda 0}}{\lambda} \\
 		&= 0 - 0 + 0 + \frac{1}{\lambda} \\
-	\mu &= \frac{1}{\lambda}
+	\mu &= \frac{1}{\lambda} \\
+	\lambda &= \frac{1}{\mu} \\
 \end{align*}
+
+Forcing time below a maximum:
+\begin{align*}
+	f(t) &= A \lambda e^{-\lambda t} \\
+	F(T) &= \int_{0}^{T} f(t) dt \\
+	F(t_{max}) &= 1 \\
+	\\
+	F(T) &= \int_{0}^{T} f(t) dt \\
+		&= \int_{0}^{T} A \lambda e^{-\lambda t} dt \\
+		&= \left[-A e^{-\lambda t}\right]_{0}^{T} \\
+		&= A\left(-e^{-\lambda T} + e^{-\lambda 0}\right) \\
+	F(T) &= A\left(1 - e^{-\lambda T}\right) \\
+	\\
+	F(t_{max}) &= A\left(1 - e^{-\lambda t_{max}}) \\
+	1 &= A\left(1 - e^{-\lambda t_{max}}) \\
+	A &= \frac{1}{1 - e^{-\lambda t_{max}}}
+\end{align*}
+
 Determine $T(F)$:
 \begin{align*}
-	F(T) &= 1 - e^{-\lambda T} \\
-	1 - F &= e^{-\lambda T} \\
-	\ln(1 - F) &= \ln(e^{-\lambda T}) \\
-	-\lambda T &= \ln(1 - F) \\
-	T(F) &= \frac{-\ln(1 - F)}{\lambda}
+	%F(T) &= 1 - e^{-\lambda T} \\
+	%1 - F &= e^{-\lambda T} \\
+	%\ln(1 - F) &= \ln(e^{-\lambda T}) \\
+	%-\lambda T &= \ln(1 - F) \\
+	%T(F) &= \frac{-\ln(1 - F)}{\lambda} \\
+	%
+	F(T) &= A\left(1 - e^{-\lambda T}\right) \\
+	\frac{F}{A} &= 1 - e^{-\lambda T} \\
+	e^{-\lambda T} &= 1 - \frac{F}{A} \\
+	\ln\left(e^{-\lambda T}\right) &= \ln\left(1 - \frac{F}{A}\right) \\
+	-\lambda T &= \ln\left(1 - \frac{F}{A}\right) \\
+	T(F) &= \frac{-1}{\lambda}\ln\left(1 - \frac{F}{A}\right) \\
+	%
+	%F(1 - e^{-25/12}) &= 1 - e^{\frac{-T}{12}} \\
+	%e^{\frac{-T}{12}} &= 1 - F(1 - e^{-25/12}) \\
+	%\ln\left(e^{\frac{-T}{12}}\right) &= \ln\left(1 - F(1 - e^{-25/12})\right) \\
+	%\frac{-T}{12} &= \ln\left(1 - F(1 - e^{-25/12})\right) \\
+	%T(F) &= -12 \ln\left(1 - F(1 - e^{-25/12})\right) \\
 \end{align*}
+
 Final Equations:
 \begin{align*}
 	\mu &= 12 \\
-	12 &= \frac{1}{\lambda} \\
+	t_{max} &= 25 \\
 	\lambda &= \frac{1}{12} \\
+	A &= \frac{1}{1 - e^{-25/12}} \\
 	\\
 	%f(t) &= \frac{1}{12} e^{\frac{-t}{12}} \\
-	f(t) &= \frac{1}{12} e^{-t/12} \\
-	F(T) &= 1 - e^{-T/12} \\
-	T(F) &= -12 \ln(1 - F)
+	f(t) &= A \lambda e^{-\lambda t} \\
+	f(t) &= \frac{1}{12 (1 - e^{-25/12})} e^{-t/12} \\
+	\\
+	F(T) &= A\left(1 - e^{-\lambda T}\right) \\
+	F(T) &= \frac{1}{1 - e^{-25/12}}\left(1 - e^{\frac{-T}{12}}\right) \\
+	%F(T) &= 1 - e^{-T/12} \\
+	\\
+	T(F) &= \frac{-1}{\lambda}\ln\left(1 - \frac{F}{A}\right) \\
+	T(F) &= -12 \ln\left(1 - F(1 - e^{-25/12})\right) \\
 \end{align*}
+
 
 \end{document}
