--- a/latex-calcs/answer-distribution.tex
+++ b/latex-calcs/answer-distribution.tex
@@ -23,7 +23,7 @@ Basic Requirements:
 	F(\infty) &= 1 \\
 	E[f(x)] &= \mu \\
 \end{align*}
-Determine $F(T)$:
+Determine $F(X)$:
 \begin{align*}
 	F(X) &= \int_{0}^{x} f(t) dt \\
 		&= \int_{0}^{x} \lambda e^{-\lambda t} dt \\
